syntax = "proto3";

package proto;

// userpb是生成代码的包名称，必须包含.或/字符，最后字符为包名
option go_package = "./hellopb";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}